allow service to run if consul failes